--- a/letsTwistAgain.css
+++ b/letsTwistAgain.css
@@ -64,6 +64,8 @@ button, .button {
 table {
     margin-top: 20px;
     border-collapse: collapse;
+    margin-left: auto;
+    margin-right: auto;
     width: 300px;
 }
 
