--- a/letsTwistAgain.css
+++ b/letsTwistAgain.css
@@ -163,4 +163,7 @@ th:first-child {
 #scoreboard {
     margin-top: 20px;
     width: 60%;
+    display: flex; 
+    justify-content: center; 
+    align-items: center;
 }
