--- a/letsTwistAgain.css
+++ b/letsTwistAgain.css
@@ -106,6 +106,7 @@ th:first-child {
     background-color: green;
     color: white;
     display: none;
+    padding-top: 10px;
 }
 
 #countdown-container {
@@ -122,12 +123,10 @@ th:first-child {
     text-align: center;
 }
 
-
 #twistGif {
     width: 250px;
     transform: translateY(-50px);
 }
-
 
 @media (max-width: 768px) {
     #twistGif {
@@ -141,7 +140,7 @@ th:first-child {
 
 #scoreboard {
     margin-top: 10px;
-    width: 60%;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
