--- a/letsTwistAgain.css
+++ b/letsTwistAgain.css
@@ -50,6 +50,7 @@ button, .button {
 
 table {
     margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     border-collapse: collapse;
