--- a/letsTwistAgain.css
+++ b/letsTwistAgain.css
@@ -37,7 +37,7 @@ button, .button {
     font-size: 1rem;
     cursor: pointer;
     display: block;
-    border: none;
+    border: 1px;
     border-radius: 5px;
 }
 
